--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -30,7 +30,7 @@
     	<div class="centered-pills">
 			<ul class="nav nav-pills">
 				<li><a href="/"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-cutlery"></span> Food Bytes</button></a></li>
-  				<li><a href="/"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-home"></span> Home</button></a></li>
+  				<li><a href="/"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-heart"></span> My Favs</button></a></li>
   				<li><a href="#"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-upload"></span> Upload</button></a></li>
 			</ul>	
 		</div>
