--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,7 +30,7 @@
     	<div class="centered-pills">
 			<ul class="nav nav-pills">
 				<li><a href="#"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-cutlery"></span> Food Bytes</button></a></li>
-  				<li><a href="#"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-home"></span> Home</button></a></li>
+  				<li><a href="#"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-heart"></span> My Favs</button></a></li>
   				<li><a href="/uploadPage"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-upload"></span> Upload</button></a></li>
 			</ul>	
 		</div>
@@ -40,16 +40,15 @@
 		<div class="foods" id="{{id}}">
 			<h3>{{food_name}}</h3>
 			<div class="image_and_like">
-				<a href="#"><button type="button" class="btn btn-default" id="like"><span class="glyphicon glyphicon-heart-empty"></span></button></a>
+				<a href="#"><button type="button" class="btn btn-default like"><span class="glyphicon glyphicon-heart-empty"></span></button></a>
 				<img src="{{imageURL}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#myModal">
-			</div>
-			<p>{{description}}</p>
+      		</div>
 
 			<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 				<div class="modal-dialog">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-						<h2 class="modal-title" id="myModalLabel">{{name}}</h2>
+						<h2 class="modal-title" id="myModalLabel">{{food_name}}</h2>
 					</div>
 					<div class="modal-body">
 						<div class="image_and_comments">
@@ -65,7 +64,7 @@
 					    			<div class="form-group">
 	    								<input type="text" class="form-control" id="comment" placeholder="add comments" name="comment">
 	    							</div>
-	    							<input type="submit" id="addCommentBtn" class="btn btn-default" value="Add Comment"></input>
+	    							<input type="submit" class="btn btn-default addCommentBtn" value="Add Comment"></input>
 								</form>
 							</div>s
 						</div>
@@ -76,8 +75,9 @@
 					<div class="modal-footer">
         				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       				</div>
-      			</div>
-      		</div>
+	   			</div>
+			</div>
+			<p>{{description}}</p>
 		</div>
 		{{/each}}
 	</div>
