--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -40,7 +40,7 @@
 		<h3>Upload</h3>
 		<div class="form-group">
 	      <label for="image">Image URL:</label>
-	      <input type="text" class="form-control" id="image" placeholder="Image" name="image">
+	      <input type="file" class="form-control" id="image" placeholder="Image" name="image">
 	    </div>
 	    <div class="form-group">
 	      <label for="name">Name:</label>
