--- a/views/myFavs.handlebars
+++ b/views/myFavs.handlebars
@@ -40,7 +40,7 @@
 		<div class="foods" id="{{id}}">
 			<h3>{{food_name}}</h3>
 			<div class="image_and_like">
-				<a href="#"><button type="button" class="btn btn-default undolike"><span class="glyphicon glyphicon-heart"></span></button></a>
+				<a href="#"><button type="button" class="btn btn-default eraseFromMyFavs"><span class="glyphicon glyphicon-minus"></span></button></a>
 				<img src="{{imageURL}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#myModal">
       		</div>
 
