fixed modal hahaha

--- a/views/myFavs.handlebars
+++ b/views/myFavs.handlebars
@@ -29,8 +29,8 @@
     <div class="navigation">
     	<div class="centered-pills">
 			<ul class="nav nav-pills">
-				<li><a href="/"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-cutlery"></span> Food Bytes</button></a></li>
-  				<li><a href="#"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-heart"></span> My Favs</button></a></li>
+				<li><a href="/"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-home"></span> Food Bytes</button></a></li>
+  				<li><a href="#"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-user"></span> My Profile</button></a></li>
   				<li><a href="/uploadPage"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-upload"></span> Upload</button></a></li>
 			</ul>	
 		</div>
