--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -29,8 +29,8 @@
 	<div class="navigation">
     	<div class="centered-pills">
 			<ul class="nav nav-pills">
-				<li><a href="/"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-cutlery"></span> Food Bytes</button></a></li>
-  				<li><a href="/myFavs"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-heart"></span> My Favs</button></a></li>
+				<li><a href="/"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-home"></span> Food Bytes</button></a></li>
+  				<li><a href="/myFavs"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-user"></span> My Profile</button></a></li>
   				<li><a href="#"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-upload"></span> Upload</button></a></li>
 			</ul>	
 		</div>
@@ -39,8 +39,8 @@
 	<form id="addFriendForm" role="form" method="get" action="/upload">
 		<h3>Upload</h3>
 		<div class="form-group">
-	      <label for="image">Image URL:</label>
-	      <input type="file" class="form-control" id="image" placeholder="Image" name="image">
+	      <label for="image">Image File:</label>
+	      <input type="file" class="form-control" id="image" placeholder=".jpg or .png" name="image">
 	    </div>
 	    <div class="form-group">
 	      <label for="name">Name:</label>
