--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Upload</title>	
+	<title>Food Bytes</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
@@ -30,7 +30,7 @@
     	<div class="centered-pills">
 			<ul class="nav nav-pills">
 				<li><a href="/"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-home"></span> Food Bytes</button></a></li>
-  				<li><a href="/myFavs"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-user"></span> My Profile</button></a></li>
+  				<li><a href="/myProfile"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-user"></span> My Profile</button></a></li>
   				<li><a href="#"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-upload"></span> Upload</button></a></li>
 			</ul>	
 		</div>
