--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,8 +29,8 @@
     <div class="navigation">
     	<div class="centered-pills">
 			<ul class="nav nav-pills">
-				<li><a href=""#><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-home"></span> Food Bytes</button></a></li>
-  				<li><a href="/myFavs"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-user"></span> My Favs</button></a></li>
+				<li><a href="#"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-home"></span> Food Bytes</button></a></li>
+  				<li><a href="/myProfile"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-user"></span> My Profile</button></a></li>
   				<li><a href="/uploadPage"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-upload"></span> Upload</button></a></li>
 			</ul>	
 		</div>
@@ -44,7 +44,7 @@
 					<li><a href="#"><button type="button" class="btn btn-default like"><span class="glyphicon glyphicon-heart-empty"> like</span></button></a></li>
 					<li><a><button type="button" class="btn btn-default clickplz"><span class="glyphicon glyphicon-hand-down"> click pic to expand</span></button></a></li>
 				</ul>
-				<img src="{{imageURL}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#modal_{{id}}">
+				<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#modal_{{id}}">
       		</div>
 
 			<div class="modal fade" id="modal_{{id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -55,21 +55,21 @@
 					</div>
 					<div class="modal-body">
 						<div class="image_and_comments">
-						<img src="{{imageURL}}" alt="Food Photos" class="img img-rounded">
+						<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded">
 						<div class="comments">
 							<h4>Comments: </h4>
 							{{#each comments}}
-							<p>{{username}} said "{{comment}}"</p>
+							<p>{{comment_usr_id}} said "{{comment}}"</p>
 							{{/each}}
 
 							<div class="addComment">
 								<form id="addCommentForm" role="form" method="get">
 					    			<div class="form-group">
-	    								<input type="text" class="form-control" id="comment" placeholder="add comments" name="comment">
+	    								<input type="text" class="form-control" id="comment_{{id}}" placeholder="add comments" name="comment">
 	    							</div>
 	    							<input type="submit" class="btn btn-default addCommentBtn" value="Add Comment"></input>
 								</form>
-							</div>s
+							</div>
 						</div>
 						</div>
 						<h3>{{tags}} <a href="#">get recipe</a></h3>
