--- a/public/css/foodPorn.css
+++ b/public/css/foodPorn.css
@@ -44,20 +44,24 @@ h1, h2, h3, h4, h5 {
 	text-align: center;
 }
 
-.image_and_like button {
-	margin-left: 10px;
-	float: left;
-}
-
 .foods img {
 	display: block;
 	min-width: 200px;
-	max-width: 450px;
+	max-width: 430px;
 	width: 80%;
 	height: 80%;
 	margin-right: auto;
 	margin-left: auto;
-	margin-bottom: 10px;
+	margin-bottom: 1px;
+}
+
+.alternateView img {
+	background-color: #A4A4A4;
+}
+
+.image_and_like button {
+	margin-left: 10px;
+	float: left;
 }
 
 .modal-title {
