--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,8 +29,8 @@
     <div class="navigation">
     	<div class="centered-pills">
 			<ul class="nav nav-pills">
-				<li><a href="#"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-home"></span> Food Bytes</button></a></li>
-  				<li><a href="/myProfile"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-user"></span> My Profile</button></a></li>
+				<li><a href="#"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-home"></span></button></a></li>
+  				<li><a href="/myProfile"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-user"></span> Profile</button></a></li>
   				<li><a href="/uploadPage"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-upload"></span> Upload</button></a></li>
 			</ul>	
 		</div>
@@ -39,13 +39,20 @@
 		{{#each allFoods}}
 		<div class="foods" id="{{id}}">
 			<h3>{{food_name}}</h3>
+			{{#if showAlternate}} <!--Alternate View-->
+			<div class="image_and_like">
+				<a href="#"><button type="button" class="btn btn-default like"><span class="glyphicon glyphicon-heart-empty"> like</span></button></a>
+				<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#modal_{{id}}">
+			</div>      		
+      		{{else}} <!--Default View-->
 			<div class="centered-pills">
 				<ul class="nav nav-pills">
 					<li><a href="#"><button type="button" class="btn btn-default like"><span class="glyphicon glyphicon-heart-empty"> like</span></button></a></li>
-					<li><a><button type="button" class="btn btn-default clickplz"><span class="glyphicon glyphicon-hand-down"> click pic to expand</span></button></a></li>
+					<li><a><button type="button" class="btn btn-default clickplz"><span class="glyphicon glyphicon-hand-down"> click pic for more info</span></button></a></li>
 				</ul>
 				<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#modal_{{id}}">
       		</div>
+      		{{/if}}
 
 			<div class="modal fade" id="modal_{{id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 				<div class="modal-dialog">
