--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -36,7 +36,7 @@
 		</div>
 	</div>
 
-	<form id="addFriendForm" role="form" method="get" action="/upload">
+	<form id="addFriendForm" role="form" method="post" action="/uploadPhoto" enctype="multipart/form-data">
 		<h3>Upload</h3>
 		<div class="form-group">
 	      <label for="image">Image URL:</label>
