--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,24 +36,14 @@
 		</div>
 	</div>
 	<div>
+		{{#if showAlternate}} <!--Alternate View-->
 		{{#each allFoods}}
 		<div class="foods" id="{{id}}">
 			<h3>{{food_name}}</h3>
-			{{#if showAlternate}} <!--Alternate View-->
 			<div class="image_and_like">
 				<a href="#"><button type="button" class="btn btn-default like"><span class="glyphicon glyphicon-heart-empty"> like</span></button></a>
 				<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#modal_{{id}}">
 			</div>      		
-      		{{else}} <!--Default View-->
-			<div class="centered-pills">
-				<ul class="nav nav-pills">
-					<li><a href="#"><button type="button" class="btn btn-default like"><span class="glyphicon glyphicon-heart-empty"> like</span></button></a></li>
-					<li><a><button type="button" class="btn btn-default clickplz"><span class="glyphicon glyphicon-hand-down"> click pic for more info</span></button></a></li>
-				</ul>
-				<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#modal_{{id}}">
-      		</div>
-      		{{/if}}
-
 			<div class="modal fade" id="modal_{{id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 				<div class="modal-dialog">
 					<div class="modal-header">
@@ -90,6 +80,54 @@
 			<p>{{description}}</p>
 		</div>
 		{{/each}}
+   		{{else}} <!--Default View-->
+   		{{#each allFoods}}
+		<div class="foods" id="{{id}}">
+			<h3>{{food_name}}</h3>
+			 <div class="centered-pills">
+				<ul class="nav nav-pills">
+					<li><a href="#"><button type="button" class="btn btn-default like"><span class="glyphicon glyphicon-heart-empty"> like</span></button></a></li>
+					<li><a><button type="button" class="btn btn-default clickplz"><span class="glyphicon glyphicon-hand-down"> click pic for more info</span></button></a></li>
+				</ul>
+				<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#modal_{{id}}">
+      		</div>     		
+			<div class="modal fade" id="modal_{{id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<h2 class="modal-title" id="myModalLabel">{{food_name}}</h2>
+					</div>
+					<div class="modal-body">
+						<div class="image_and_comments">
+						<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded">
+						<div class="comments">
+							<h4>Comments: </h4>
+							{{#each comments}}
+							<p>{{comment_usr_id}} said "{{comment}}"</p>
+							{{/each}}
+
+							<div class="addComment">
+								<form id="addCommentForm" role="form" method="get">
+					    			<div class="form-group">
+	    								<input type="text" class="form-control" id="comment_{{id}}" placeholder="add comments" name="comment">
+	    							</div>
+	    							<input type="submit" class="btn btn-default addCommentBtn" value="Add Comment"></input>
+								</form>
+							</div>
+						</div>
+						</div>
+						<h3>{{tags}} <a href="#">get recipe</a></h3>
+					</div>
+				
+					<div class="modal-footer">
+        				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      				</div>
+	   			</div>
+			</div>
+			<p>{{description}}</p>
+		</div>
+		{{/each}}
+   		{{/if}}
 	</div>
 
 	</div>
