--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -39,8 +39,8 @@
 	<form id="addFriendForm" role="form" method="get" action="/upload">
 		<h3>Upload</h3>
 		<div class="form-group">
-	      <label for="image">Image File:</label>
-	      <input type="file" class="form-control" id="image" placeholder=".jpg or .png" name="image">
+	      <label for="image">Image URL:</label>
+	      <input type="text" class="form-control" id="image" placeholder="For now please give an image URL" name="image">
 	    </div>
 	    <div class="form-group">
 	      <label for="name">Name:</label>
@@ -51,8 +51,8 @@
 	      <input type="text" class="form-control" id="description" placeholder="Description" name="description">
 	    </div>
 	    <div class="form-group">
-	    	<label for="recipe">Recipe:</label>
-	    	<input type="text" class="form-control" id="recipe" placeholder="Recipe or URL" name="recipe">
+	    	<label for="recipe">Recipe URL:</label>
+	    	<input type="text" class="form-control" id="recipe" placeholder="For now please give a recipe URL" name="recipe">
 	    </div>
 	    <div class="form-group">
 	    	<label for="tag">Tags:</label>
@@ -62,5 +62,15 @@
 	</form>
 
 	</div>
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-48516049-2', 'foodbytes.herokuapp.com');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
