--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -86,10 +86,10 @@
 			<h3>{{food_name}}</h3>
 			 <div class="centered-pills">
 				<ul class="nav nav-pills">
-					<li><a href="#"><button type="button" class="btn btn-default like"><span class="glyphicon glyphicon-heart-empty"> like</span></button></a></li>
+					<li><a><button type="button" class="btn btn-default like"><span class="glyphicon glyphicon-heart-empty"> like</span></button></a></li>
 					<li><a><button type="button" class="btn btn-default clickplz"><span class="glyphicon glyphicon-hand-down"> click pic for more info</span></button></a></li>
 				</ul>
-				<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#modal_{{id}}">
+				<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand imgclicked" data-toggle="modal" data-target="#modal_{{id}}">
       		</div>     		
 			<div class="modal fade" id="modal_{{id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 				<div class="modal-dialog">
@@ -134,9 +134,18 @@
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script type="text/javascript" src="../js/search/jquery-1.8.2.min.js"></script>
-    <!--<script type="text/javascript" src="../js/search/jquery.mockjax.js"></script>-->
     <script type="text/javascript" src="../js/search/jquery.autocomplete.js"></script>
     <script type="text/javascript" src="../js/search/foods.js"></script>
-    <!--<script type="text/javascript" src="../js/search/demo.js"></script>-->
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-48516049-2', 'foodbytes.herokuapp.com');
+  ga('send', 'pageview');
+
+</script>
+
 </body>
 </html>
