--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -36,12 +36,19 @@
 		</div>
 	</div>
 
-	<form id="addFriendForm" role="form" method="post" action="/uploadPhoto" enctype="multipart/form-data">
-		<h3>Upload</h3>
+	<form id="addFriendForm" action="/upload" method="POST" enctype="multipart/form-data">
+		<h3>Upload a file or link a URL!</h3>
 		<div class="form-group">
 	      <label for="image">Image File:</label>
 	      <input type="file" class="form-control" id="image" placeholder=".jpg or .png" name="image">
 	    </div>
+<!-- 		<div class="form-group">
+	      <label for="image">Image URL:</label>
+	      <input type="text" class="form-control" id="image" placeholder=".jpg or .png" name="image">
+	    </div>	    
+ -->
+<!-- 		</br>
+		<h3>Details of image</h3>
 	    <div class="form-group">
 	      <label for="name">Name:</label>
 	      <input type="text" class="form-control" id="name" placeholder="Name" name="name">
@@ -57,10 +64,19 @@
 	    <div class="form-group">
 	    	<label for="tag">Tags:</label>
 	    	<input type="text" class="form-control" id="tag" placeholder="#example" name="tag">
-	    </div>
+	    </div> -->
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Upload the food!"></input>
 	</form>
 
 	</div>
+
+
+
+
+
+
+	    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="/javascripts/jquery.form.js"></script>
+    <script src="/javascripts/upload.js"></script>
 </body>
 </html>
