--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,6 +2,21 @@
 
 <html>
 <head>
+	<!-- Google Analytics Content Experiment code -->
+<script>function utmx_section(){}function utmx(){}(function(){var
+k='83057663-1',d=document,l=d.location,c=d.cookie;
+if(l.search.indexOf('utm_expid='+k)>0)return;
+function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
+indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
+length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
+'<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
+'://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
+'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
+valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
+'" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
+</script><script>utmx('url','A/B');</script>
+<!-- End of Google Analytics Content Experiment code -->
+
 	<title>Food Bytes</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,8 +45,8 @@
     	<div class="centered-pills">
 			<ul class="nav nav-pills">
 				<li><a href="#"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-home"></span></button></a></li>
-  				<li><a href="/myProfile"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-user"></span> Profile</button></a></li>
-  				<li><a href="/uploadPage"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-upload"></span> Upload</button></a></li>
+  				<li><a href="/myProfile"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-user"></span></button></a></li>
+  				<li><a href="/uploadPage"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-upload"></span></button></a></li>
 			</ul>	
 		</div>
 	</div>
@@ -43,6 +58,8 @@
 			<div class="image_and_like">
 				<a href="#"><button type="button" class="btn btn-default like"><span class="glyphicon glyphicon-heart-empty"> like</span></button></a>
 				<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#modal_{{id}}">
+				<p>{{likes}} people liked this.</p>
+				<p>{{description}}</p>
 			</div>      		
 			<div class="modal fade" id="modal_{{id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 				<div class="modal-dialog">
@@ -77,7 +94,6 @@
       				</div>
 	   			</div>
 			</div>
-			<p>{{description}}</p>
 		</div>
 		{{/each}}
    		{{else}} <!--Default View-->
@@ -87,7 +103,7 @@
 			 <div class="centered-pills">
 				<ul class="nav nav-pills">
 					<li><a><button type="button" class="btn btn-default like"><span class="glyphicon glyphicon-heart-empty"> like</span></button></a></li>
-					<li><a><button type="button" class="btn btn-default clickplz"><span class="glyphicon glyphicon-hand-down"> click pic for more info</span></button></a></li>
+					<li><a><button type="button" class="btn btn-default clickplz"><span class="glyphicon glyphicon-hand-down"> click pic</span></button></a></li>
 				</ul>
 				<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand imgclicked" data-toggle="modal" data-target="#modal_{{id}}">
       		</div>     		
