hopefully fixed problem?

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -57,7 +57,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 			<h3>{{food_name}}</h3>
 			<div class="image_and_like">
 				<a href="#"><button type="button" class="btn btn-default like"><span class="glyphicon glyphicon-heart-empty"> like</span></button></a>
-				<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#modal_{{id}}">
+				<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand imgclicked" data-toggle="modal" data-target="#modal_{{id}}">
 				<p>{{likes}} people liked this.</p>
 				<p>{{description}}</p>
 			</div>      		
