--- a/views/myFavs.handlebars
+++ b/views/myFavs.handlebars
@@ -29,57 +29,66 @@
     <div class="navigation">
     	<div class="centered-pills">
 			<ul class="nav nav-pills">
-				<li><a href="/"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-home"></span></button></a></li>
-  				<li><a href="#"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-user"></span></button></a></li>
-  				<li><a href="/uploadPage"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-upload"></span></button></a></li>
+				<li><a href="/"><button type="button" class="btn btn-default">Home</button></a></li>
+  				<li><a href="#"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-user"></span></button></a></li>
+  				<li><a href="/uploadPage"><button type="button" class="btn btn-default">Upload</button></a></li>
 			</ul>	
 		</div>
+		<ul class = "nav nav-tabs">
+			<li class="active"><a href=".myUploads" data-toggle="tab">My Uploads</a></li>
+			<li><a href=".myLikedFoods" data-toggle="tab">My Liked Foods</a></li>
+		</ul>
 	</div>
-	<div>
-		{{#each allFoods}}
-		<div class="foods" id="{{id}}">
-			<h3>{{food_name}}</h3>
-			<div class="image_and_like">
-				<a href="#"><button type="button" class="btn btn-default eraseFromMyFavs"><span class="glyphicon glyphicon-minus"></span></button></a>
-				<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#modal_{{id}}">
-      		</div>
 
-			<div class="modal fade" id="modal_{{id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-				<div class="modal-dialog">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-						<h2 class="modal-title" id="myModalLabel">{{food_name}}</h2>
-					</div>
-					<div class="modal-body">
-						<div class="image_and_comments">
-						<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded">
-						<div class="comments">
-							<h4>Comments: </h4>
-							{{#each comments}}
-							<p>{{comment_usr_id}} said "{{comment}}"</p>
-							{{/each}}
+	<div class="tab-content">
+		<div class="tab-pane active myUploads">
+			{{#each allFoods}}
+			<div class="foods" id="{{id}}">
+				<h3>{{food_name}}</h3>
+				<div class="image_and_like">
+					<a href="#"><button type="button" class="btn btn-danger eraseFromMyUploads"><span class="glyphicon glyphicon-minus"></span></button></a>
+					<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#modal_{{id}}">
+      			</div>
+				<div class="modal fade" id="modal_{{id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+							<h2 class="modal-title" id="myModalLabel">{{food_name}}</h2>
+						</div>
+						<div class="modal-body">
+							<div class="image_and_comments">
+							<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded">
+							<div class="comments">
+								<h4>Comments: </h4>
+								{{#each comments}}
+								<p>{{comment_usr_id}} said "{{comment}}"</p>
+								{{/each}}
 
-							<div class="addComment">
-								<form id="addCommentForm" role="form" method="get">
-					    			<div class="form-group">
-	    								<input type="text" class="form-control" id="comment" placeholder="add comments" name="comment">
-	    							</div>
-	    							<input type="submit" class="btn btn-default addCommentBtn" value="Add Comment"></input>
-								</form>
+								<div class="addComment">
+									<form id="addCommentForm" role="form" method="get">
+						    			<div class="form-group">
+	    									<input type="text" class="form-control" id="comment" placeholder="add comments" name="comment">
+	    								</div>
+	    								<input type="submit" class="btn btn-default addCommentBtn" value="Add Comment"></input>
+									</form>
+								</div>
 							</div>
+							</div>
+							<h3>{{tags}} <a href="#">get recipe</a></h3>
 						</div>
-						</div>
-						<h3>{{tags}} <a href="#">get recipe</a></h3>
-					</div>
-				
-					<div class="modal-footer">
-        				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      				</div>
-	   			</div>
+						<div class="modal-footer">
+        					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      					</div>
+	   				</div>
+				</div>
+				<p>{{description}}</p>
 			</div>
-			<p>{{description}}</p>
+			{{/each}}
 		</div>
-		{{/each}}
+
+		<div class="tab-pane myLikedFoods">
+			<h5>You have not liked anything yet!</h5>
+		</div>
 	</div>
 
 	</div>
