--- a/views/myFavs.handlebars
+++ b/views/myFavs.handlebars
@@ -12,14 +12,7 @@
 
 	<link href="../css/search/styles.css" rel="stylesheet"/>
 	<link href="../css/bootstrap.css" rel="stylesheet"/>
-	<link href="../css/foodPorn.css" rel="stylesheet"/>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->        
+	<link href="../css/foodPorn.css" rel="stylesheet"/>        
 </head>
 
 <body>
@@ -42,6 +35,7 @@
 
 	<div class="tab-content">
 		<div class="tab-pane active myUploads">
+			{{#if showUploads}}
 			{{#each allFoods}}
 			<div class="foods" id="{{id}}">
 				<h3>{{food_name}}</h3>
@@ -84,6 +78,9 @@
 				<p>{{description}}</p>
 			</div>
 			{{/each}}
+			{{else}}
+				<h5>You have not uploaded anything yet!</h5>
+			{{/if}}
 		</div>
 
 		<div class="tab-pane myLikedFoods">
