--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -40,7 +40,7 @@
 		<h3>Upload</h3>
 		<div class="form-group">
 	      <label for="image">Image URL:</label>
-	      <input type="text" class="form-control" id="image" placeholder="For now please give an image URL" name="image">
+	      <input type="text" class="form-control" id="image" placeholder="Please give an image URL" name="image">
 	    </div>
 	    <div class="form-group">
 	      <label for="name">Name:</label>
@@ -52,7 +52,7 @@
 	    </div>
 	    <div class="form-group">
 	    	<label for="recipe">Recipe URL:</label>
-	    	<input type="text" class="form-control" id="recipe" placeholder="For now please give a recipe URL" name="recipe">
+	    	<input type="text" class="form-control" id="recipe" placeholder="Please give a recipe URL" name="recipe">
 	    </div>
 	    <div class="form-group">
 	    	<label for="tag">Tags:</label>
