--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -31,7 +31,7 @@
 			<ul class="nav nav-pills">
 				<li><a href="/"><button type="button" class="btn btn-default">Home</button></a></li>
   				<li><a href="/myProfile"><button type="button" class="btn btn-default">My Profile</button></a></li>
-  				<li><a href="#"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-upload"></span></button></a></li>
+  				<li class="selected"><a href="#"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-upload"></span></button></a></li>
 			</ul>	
 		</div>
 	</div>
