--- a/views/myFavs.handlebars
+++ b/views/myFavs.handlebars
@@ -23,11 +23,11 @@
     	<div class="centered-pills">
 			<ul class="nav nav-pills">
 				<li><a href="/"><button type="button" class="btn btn-default">Home</button></a></li>
-  				<li><a href="#"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-user"></span></button></a></li>
+  				<li class="selected"><a href="#"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-user"></span></button></a></li>
   				<li><a href="/uploadPage"><button type="button" class="btn btn-default">Upload</button></a></li>
 			</ul>	
 		</div>
-		<ul class = "nav nav-tabs">
+		<ul class = "nav nav-tabs nav-justified" id="myfavs_navbar">
 			<li class="active"><a href=".myUploads" data-toggle="tab">My Uploads</a></li>
 			<li><a href=".myLikedFoods" data-toggle="tab">My Liked Foods</a></li>
 		</ul>
