--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -36,7 +36,7 @@
 		</div>
 	</div>
 
-	<form id="addFriendForm" action="/upload" method="POST" enctype="multipart/form-data">
+	<form id="addFriendForm" action="/upload" method="get" enctype="multipart/form-data">
 		<h3>Upload a file or link a URL!</h3>
 		<div class="form-group">
 	      <label for="image">Image URL:</label>
