--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -19,7 +19,7 @@
 
 	<div class="container">
 
-	<div class="navigation">
+	<div class="navigation navbar-fixed-top">
     	<div class="centered-pills">
 			<ul class="nav nav-pills">
 				<li><a href="/"><button type="button" class="btn btn-default">Home</button></a></li>
@@ -35,7 +35,6 @@
 	      <label for="image">Image URL:</label>
 	      <input type="text" class="form-control" id="image" placeholder="Please give an image URL" name="image">
 	    </div>
-	    <br>
 	    <h3>Details of Picture</h3>
 	    <div class="form-group">
 	      <label for="name">Name:</label>
