--- a/views/myFavs.handlebars
+++ b/views/myFavs.handlebars
@@ -20,7 +20,7 @@
 	<div class="container">
 
     <div class="navigation">
-    	<div class="centered-pills">
+    	<div class="centered-pills navbar-fixed-top">
 			<ul class="nav nav-pills">
 				<li><a href="/"><button type="button" class="btn btn-default">Home</button></a></li>
   				<li class="selected"><a href="#"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-user"></span></button></a></li>
